add new module with kafka integration